--- a/css/style.css
+++ b/css/style.css
@@ -240,11 +240,11 @@ body{
                 }
 
                 .all .maus-habitos > .conteudo > .left > .container > .img {
-                    background-image: url(/img/alimentos-variados.jpg);
+                    background-image: url(/img/pizza.jpg);
                 }
 
                 .all .maus-habitos > .conteudo > .right > .container > .img {
-                    background-image: url(/img/alimentos-variados-2.jpg);
+                    background-image: url(/img/gula.jpg);
                 }
 
             .all .bons-habitos > .conteudo > .left > .container > .img:hover,
@@ -260,32 +260,48 @@ body{
         width: 50%;
         height: auto;
     } 
+        .all .maus-habitos > .lista .center {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .all .maus-habitos > .lista .center p{
+            width: 50%;
+        }
+
         .all .bons-habitos > .conteudo > .center > p,
-        .all .maus-habitos > .conteudo > .center > p{
+        .all .maus-habitos > .conteudo > .center > p,
+        .all .maus-habitos > .lista > .center > p {
             text-align: justify;
         }
 
 
-.all .bons-habitos > .lista > ul {
+.all .bons-habitos > .lista > ul,
+.all .maus-habitos > .lista > ul {
     list-style: none;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-    .all .bons-habitos > .lista ul li{
+    .all .bons-habitos > .lista ul li,
+    .all .maus-habitos > .lista ul li{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .all .bons-habitos > .lista ul li h3 {
+    .all .bons-habitos > .lista ul li h3,
+    .all .maus-habitos > .lista ul li h3{
         text-align: start;
         width: 80%;
         position: relative;
     }
 
-    .all .bons-habitos > .lista ul li h3::after{
+    .all .bons-habitos > .lista ul li h3::after,
+    .all .maus-habitos > .lista ul li h3::after{
         position: absolute;
         content: "";
         width: 100%;
@@ -295,28 +311,41 @@ body{
         background-color: black;
     }
 
-        .all .bons-habitos > .lista ul li .conteudo-li {
+        .all .bons-habitos > .lista ul li .conteudo-li,
+        .all .maus-habitos > .lista ul li .conteudo-li {
             display: flex;
             width: 80%;
         }
 
-        .all .bons-habitos > .lista ul li .conteudo-li .right {
+        .all .maus-habitos > .lista ul li .conteudo-li {
+            flex-direction: row-reverse;
+        }
+
+        .all .maus-habitos > .lista ul.lista-evitar-maus-habitos li .conteudo-li {
+            flex-direction: row;
+        }
+
+        .all .bons-habitos > .lista ul li .conteudo-li .right,
+        .all .maus-habitos > .lista ul li .conteudo-li .right {
             width: 30%;
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
-        .all .bons-habitos > .lista ul li .conteudo-li .texto {
+        .all .bons-habitos > .lista ul li .conteudo-li .texto,
+        .all .maus-habitos > .lista ul li .conteudo-li .texto {
             width: 70%;
         }
 
-            .all .bons-habitos > .lista ul li .conteudo-li .texto p{
+            .all .bons-habitos > .lista ul li .conteudo-li .texto p,
+            .all .maus-habitos > .lista ul li .conteudo-li .texto p{
                 text-align: justify;
                 padding: 0 10px;
             }
 
-            .all .bons-habitos > .lista ul li .conteudo-li .container-li {
+            .all .bons-habitos > .lista ul li .conteudo-li .container-li,
+            .all .maus-habitos > .lista ul li .conteudo-li .container-li {
                 width: 200px;
                 height: 200px;
                 overflow: hidden;
@@ -325,11 +354,13 @@ body{
 
             } 
 
-            .all .bons-habitos > .lista ul li .conteudo-li .quadrado{
+            .all .bons-habitos > .lista ul li .conteudo-li .quadrado,
+            .all .maus-habitos > .lista ul li .conteudo-li .quadrado{
                 border-radius: 10%;
             }
 
-                .all .bons-habitos > .lista ul li .conteudo-li .container-li .img {
+                .all .bons-habitos > .lista ul li .conteudo-li .container-li .img,
+                .all .maus-habitos > .lista ul li .conteudo-li .container-li .img {
                     width: 100%;
                     height: 100%;
                     background-position: center center;
@@ -343,7 +374,8 @@ body{
                 .all .bons-habitos > .lista ul li .conteudo-li .container-li .sal {background-image: url(/img/sal.jpg);}
                 .all .bons-habitos > .lista ul li .conteudo-li .container-li .alcoon {background-image: url(/img/alcool.jpg); background-position: center top;}
 
-                .all .bons-habitos > .lista ul li .conteudo-li .container-li .img:hover{
+                .all .bons-habitos > .lista ul li .conteudo-li .container-li .img:hover,
+                .all .maus-habitos > .lista ul li .conteudo-li .container-li .img:hover{
                     transform: scale(1.05)
                 }
 
